--- a/tesi.bib
+++ b/tesi.bib
@@ -45,6 +45,17 @@ url={http://www.cs.cmu.edu/afs/cs/project/jair/pub/volume20/fox03a.pdf},
     pages = {2003}
 }
 
+@inproceedings {Vanegue:2012,
+title = {SMT Solvers in Software Security},
+author = {ulien Vanegue, Sean Heelan, Rolf Rolles},
+booktitle = {Presented as part of the 6th USENIX Workshop on Offensive Technologies},
+year = {2012},
+location = {Bellevue, WA},
+url = {https://www.usenix.org/conference/woot12/workshop-program/presentation/Vanegue},
+publisher = {USENIX},
+address = {Berkeley, CA}
+}
+
 @MISC{pddl-97,
     author = { },
     title = {PDDL - The Planning Domain Definition Language},
