--- a/introduzione.tex
+++ b/introduzione.tex
@@ -189,8 +189,8 @@ più comuni misure di protezione attraverso la ROP. Il secondo capitolo
 invece è una descrizione dettagliata dell'architettura designata per
 Dropper. Il terzo capitolo parla invece della sua attuale
 implementazione. Infine nelle conclusioni sono presenti considerazioni
-generali emerse durante il lavoro di tesi nonché sugli sviluppi futuri
-che può avere Dropper e strumenti simili.
+generali emerse durante il lavoro di tesi nonché sugli sviluppi e le
+idee future di Dropper.
 
 %% NX, ASRL, ROP
 
