--- a/architettura.tex
+++ b/architettura.tex
@@ -1,61 +1,103 @@
 \chapter{Architettura di Dropper}
 \label{cap:architettura}
 
-In questo capitolo si descrive l'architettura alla quale si sta
-facendo riferimento per lo sviluppo di dropper.
+In questo capitolo si fa una descrizione dettagliata dei requisiti e
+delle funzionalità presenti nell'architettura designata per lo
+sviluppo di Dropper.
 
-L'obiettivo di dropper è quello di generare, analizzando un file
-oggetto eseguibile, una catena di gadget che se iniettata nello stack
-dell'immagine del processo associato a quell'eseguibile, consente di
-prenderne il controllo, eseguendo un comando arbitrario sulla
-macchina. Lo strumento deve poter applicare tecniche note per eludere
-misure di protezioni esistenti come la casualizzazione degli indirizzi
-(\lstinline{ASRL}), l'isolamento delle pagine (\lstinline{NX}) o la
-read-only relocation. Dropper analizza il binario utilizzando alcune
-delle funzionalità del framework per l'analisi dei binari
-\lstinline{BARF}. Il linguaggio utilizzato per la scrittura di dropper
-è python. Dropper supporta file oggetto eseguibili di tipo ELF32 e
-ELF64, architettura intel 8086 e amd 64, su piattaforme
-GNU/Linux. Dropper, nella sua fase di analisi, estrapola dal file
-binario i gadgets disponibili, per poi estrapolarne la semantica. Per
-questi compiti dropper si avvale sia dell'emulazione dei gadget, sia
-della loro modellizzazione in formule SMT, come descritto più in
-dettaglio nelle prossime sezioni. Una volta estrapolata la semantica
-dei gadget è possibile costruire piccole catene di uno o più gadget
-che consentano di eseguire operazioni particolari (come modificare il
-valore dello stack, chiamare una funzione, settare un registro,
-scrivere in memoria, ecc). Dropper assembla queste piccole catene in
-catene sempre più lunghe che eseguono operazioni più complesse e
-articolate. La generazione di queste sequenze avviene,
-nell'implementazione attuale, in maniera programmatica, cioè la
-procedura per la sua costruzione è codificata in un algoritmo. È
-interessante esplorare metodi di generazione di sequenze in maniera
-dichiarativa, ad esempio utilizzando linguaggi di planning come
-\lstinline{PDDL}\cite{pddl-97}. Un primo approccio che utilizza questa
-strategia è descritto nella sezione \ref{sec:pddl}.Una volta
-codificato il problema in questi termini si può chiedere ad un
-planner, come se fosse una sorta di oracolo, in che sequenza collegare
-le varie azioni (cioè le varie sequenze elementari di gadget) per
-ottenere quello stato. La rappresentazione delle informazioni sulla
-semantica dei gadget è espressa in questo modo in forma esplicita, e
-non più codificata in un algoritmo.
+L'obiettivo di Dropper è quello di generare, analizzando un file
+oggetto eseguibile, il payload corrispondente ad una catena di gadget
+che se iniettata nello stack dell'immagine del processo associato a
+quell'eseguibile, consente di prenderne il controllo, eseguendo un
+comando arbitrario sulla macchina. Lo strumento applica tecniche note
+per eludere misure di protezioni esistenti come la casualizzazione
+degli indirizzi (\lstinline{ASRL}), stack e aree dati non eseguibili
+(``W $\oplus$ X'') o la read-only relocation, automatizzando il più
+possibile la scelta della strategia appropriata. 
 
-Dropper è composto da tre moduli principali:
+Dropper analizza il binario utilizzando alcune delle funzionalità del
+recente framework per l'analisi dei binari \lstinline{BARF}
+\cite{Heitman-14}. Il linguaggio utilizzato per la scrittura di
+Dropper è python e, nella sua prima versione, supporta le architetture
+\lstinline{x86} e \lstinline{x86-64} su piattaforme GNU/Linux (il
+formato degli eseguibili supportato è ELF). Tuttavia come tratteremo
+meglio nel corso di questo capitolo, queste restrizioni possono essere
+facilmente superate nelle future versioni grazie all'astrazione data
+dall'utilizzio di un linguaggio intermedio per rappresentare le
+istruzioni.
+
+Una tipica sessione di Dropper può essere grossolanamente divisa in
+quattro fasi:
+
+\begin{enumerate}
+\item Analisi del binario 
+\item Estrapolazione e analisi dei gadgets
+\item Scelta della strategia da utilizzare
+\item Creazione del payload
+\end{enumerate}
+
+Nella prima fase, quella in cui si analizzano le informazioni presenti
+nel file oggetto eseguibile esaminato, vengono ricavate le
+informazioni sulle misure di protezione attualmente in uso sul file
+oggetto eseguibile, le funzioni utilizzate, le librerie dinamiche
+importate. Queste informazioni verranno utilizzate specialmente nella
+terza fase.
+
+Dropper, nella seconda fase, estrapola dal file binario i gadgets
+disponibili, per poi estrapolarne la semantica. Per questi compiti
+dropper si avvale sia dell'emulazione dei gadget, sia della loro
+modellizzazione in formule SMT, come descritto più in dettaglio nelle
+prossime sezioni. Una volta estrapolata la semantica dei gadget è
+possibile costruire piccole catene di uno o più gadget che consentano
+di eseguire operazioni particolari (come modificare il valore dello
+stack, chiamare una funzione, settare un registro, scrivere in
+memoria, operazioni aritmetiche, leggere dalla memoria, ecc). Dropper
+assembla poi queste piccole catene in catene più lunghe che eseguono
+operazioni più complesse e articolate. L'architettura prevede che la
+generazione di queste sequenze avvenga sia in maniera programmatica,
+cioè la procedura per la sua costruzione è codificata in un algoritmo,
+sia in maniera dichiarativa, ad esempio utilizzando linguaggi di
+planning come \lstinline{PDDL}\cite{pddl-97}. Un analisi sui vantaggi
+e sui problemi che si incontrano in una codifica del genere è
+riportata nella sezione \ref{sec:pddl}.
+
+Nella terza fase, per scegliere la tecnica di exploit appropriata,
+Dropper si basa sia su alcune informazioni che fornisce l'utente in
+merito all'errore che si sta sfruttando (ad esempio se può controllare
+un file descriptor, se ci sono limiti nella dimensione del payload o
+nei caratteri ammessi) sia su quelle ricavate dalla prima fase di
+analisi dell'eseguibile. Dev'essere semplice poter aggiungere nuove
+strategie.
+
+L'ultima fase si occupa di assemblare gli indirizzi dei gadget e
+valori concreti per la generazione di un payload che, una volta
+iniettato sullo stack, comporti l'esecuzione delle varie catene
+assemblate nelle fasi precedenti.
+
+%% Una volta codificato il
+%% problema in questi termini si può chiedere ad un planner, come se
+%% fosse una sorta di oracolo, in che sequenza collegare le varie azioni
+%% (cioè le varie sequenze elementari di gadget) per ottenere quello
+%% stato. La rappresentazione delle informazioni sulla semantica dei
+%% gadget è espressa in questo modo in forma esplicita, e non più
+%% codificata in un algoritmo.
+
+L'architettura di Dropper si compone di tre moduli logici:
 
 \begin{itemize}
 
-  \item dropper: È il modulo che si occupa di (a) leggere il binario,
+  \item Core: È il modulo che si occupa di (a) leggere il binario,
     (b) coordinare le operazioni dei restanti moduli, (c) interagire
     con l'utente per ottenere informazioni aggiuntive sul binario e/o
     sullo scenario nel quale dev'essere prodotta la catena e (d)
     scegliere le tecniche da utilizzare per riuscire a generare la
     catena
 
-  \item gadgetstools: È il modulo che si occupa dell'estrapolazione,
+  \item Gadgets: È il modulo che si occupa dell'estrapolazione,
     dell'analisi, della scelta e dell'assemblaggio dei gadget da utilizzare nella
     composizione della catena e dei vari sui frammenti
 
-  \item payloadchunk: È il modulo che si occupa di trasformare una
+  \item Payload: È il modulo che si occupa di trasformare una
     sequenza ordinata di gadget in un payload vero e proprio da
     iniettare sullo stack, gestendo il posizionamento corretto degli
     indirizzi e dei valori utilizzati dai vari gadget
@@ -66,48 +108,46 @@ Dropper è composto da tre moduli principali:
 
 È il modulo che si occupa di leggere il file binario, interagire con
 l'utente, scegliere le varie strategie da adottare e di coordinare le
-azioni degli altri moduli. Il modulo legge il file e istanzia un
-oggetto di tipo gadgets tools che si occuperà di estrapolare i gadgets
-dal binario e analizzarli. Per il parsing delle strutture dati
-presenti nell'elf dropper utilizza la libreria
-\lstinline{pyelftools}\cite{pyelftools}. Combinando le informazioni
-provenienti da queste sezioni dropper ricava la lista delle funzioni
-che il file oggetto eseguibile utilizza e le relative entry nella
-\emph{Procedure Linkage Table} (vedi TODORIF). La presenza di alcune
-funzioni può semplificare molto la generazione della catena, di fatto
-trasformandola in una serie di \emph{return-to-plt}. Dropper analizza
-altre strutture chiave dell'ELF per individuare aree nella memoria
-dell'immagine del processo dove è possibile scrivere. L'utente,
-interagendo con il modulo, fornisce informazioni aggiuntive necessarie
-alla generazione della catena e linee guida sulla strategia da
-utilizzare. Tra le informazioni che il modulo non può ricavare
-automaticamente troviamo:
+azioni degli altri moduli. 
+
+Dropper parsa l'ELF e ricava la lista delle funzioni che il file
+oggetto eseguibile utilizza e le relative entry nella \emph{Procedure
+  Linkage Table} (vedi \ref{sec:plt}), le aree di memoria all'interno
+dell'immagine del processo dove è possibile scrivere e da dove è
+possibile leggere, le misure di protezione utilizzate dal file
+binario. Per il parsing dell'ELF Dropper utilizza una libreria
+apposita, pyelftools (\cite{pyelftools}).
+
+L'utente poi, interagendo con il modulo, fornisce informazioni
+aggiuntive necessarie alla generazione della catena e linee guida
+sulla strategia da utilizzare. Tra le informazioni che deve può
+fornire l'utente troviamo:
 
 \begin{itemize}
   \item La possibilità da parte dell'utente di controllare un file
     descriptor
-
   \item I file oggetto condivisi utilizzati dall'eseguibile sulla
     macchina dove si intende far eseguire la catena (per la
     ricavazione degli offset da utilizzare nelle tecniche di
-    sovrascrizione della GOT Table vedi TODO)
-
+    sovrascrizione della GOT vedi sez. \ref{sec:expl})
   \item Eventuali caratteri che non possono comparire all'interno del
     payload
-
-  \item Eventuali limiti sulla lunghezza dei payload
-
+  \item Eventuali limiti sulla lunghezza del payload
   \item Il comando da eseguire
-
 \end{itemize}
 
 Con tutte queste informazioni il modulo può quindi procedere nello
 stabilire quale strategia utilizzare e richiedere al modulo
-gadgetstools le sequenze di gadget necessarie. Lo schema principale,
-con alcune varianti che analizzeremo in seguito, si può dividere in
-due fasi: (a) preparare gli argomenti per eseguire una chiamata ad una
-funzione di libreria che ci consenta di eseguire un comando arbitrario
-e (b) eseguire quella funzione.
+gadgetstools le sequenze di gadget necessarie. Lo schema principale
+delle varie strategie, si può dividere in due fasi: 
+
+\begin{inparaenum}[1)]
+\item preparare gli
+argomenti per eseguire una chiamata ad una funzione di libreria che ci
+consenta di eseguire un comando arbitrario e 
+\item eseguire quella
+funzione.
+\end{inparaitem}
 
 Alcune delle strategie che si possono utilizzare per raggiungere il
 primo scopo insieme alle precondizioni necessarie sono elencate di
