--- a/tesi.bib
+++ b/tesi.bib
@@ -162,6 +162,10 @@ publisher = {USENIX Association},
   organization={IEEE}
 }
 
+@inproceedings{longld:2010,
+author = {longld},
+year = {2010},
+}
 @inproceedings{Shacham:2004,
  author = {Shacham, Hovav and Page, Matthew and Pfaff, Ben and Goh, Eu-Jin and Modadugu, Nagendra and Boneh, Dan},
  title = {On the Effectiveness of Address-space Randomization},
