--- a/architettura.tex
+++ b/architettura.tex
@@ -147,7 +147,7 @@ delle varie strategie, si può dividere in due fasi:
   arbitrario (\lstinline{execve} o \lstinline{system}) e
 \item eseguire quella
 funzione.
-\end{inparaitem}
+\end{inparaenum}
 
 Per scrivere in memoria è possibile utilizzare diverse strategie,
 Dropper deve scegliere la più adatta o quella specificata
